fix DateInput's text color contrast issue when readonly (#3209)
* fix color contrast issue when readonly

* add changeset

--- a/packages/circuit-ui/components/DateInput/components/DateSegment.module.css
+++ b/packages/circuit-ui/components/DateInput/components/DateSegment.module.css
@@ -30,10 +30,6 @@
   background-color: var(--cui-bg-highlight);
 }
 
-.base:read-only {
-  color: var(--cui-fg-subtle);
-}
-
 .base:disabled,
 .base[disabled] {
   color: var(--cui-fg-normal-disabled);
